<resources>
    <string name="app_name">Judge Me</string>
    <string name="facebook_app_id">216060048963088</string>
    <string name="fb_login_protocol_scheme">fb216060048963088</string>
    <string name="title_configuracao">Configurações</string>
    <string name="title_editar_perfil">Editar perfil</string>
    <string name="title_logout">Logout</string>
    <string name="title_publico">Público</string>
    <string name="title_amigos">Amigos</string>
    <string name="title_adiciona">Adicionar</string>
    <string name="title_pesquisa">Pesquisar</string>
    <string name="title_perfil">Perfil</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_senha">Senha</string>
    <string name="hint_login_mostrar_senha">Mostrar senha</string>
    <string name="hint_login_logar">Fazer login</string>
    <string name="hint_login_logar_google">Continuar com o Google</string>
    <string name="hint_login_logar_facebook">Fazer login com o Facebook</string>
    <string name="hint_login_esqueceu_senha">Esqueceu senha?</string>
    <string name="hint_login_criar_conta">Criar uma conta</string>
    <string name="hint_login_email_verificar">Um email para verificação da conta foi enviado!</string>
    <string name="hint_login_credenciais_invalidas">Verifique o email e a senha!</string>
    <string name="hint_login_ou">OU</string>
    <string name="hint_login_meio_errado">Credenciais inválidas ou conta vinculada com o Google ou Facebook!</string>
    <string name="hint_login_facebook_erro">Erro ao logar com Facebook!</string>
    <string name="hint_esqueceu_senha">Esqueceu a senha?</string>
    <string name="hint_esqueceu_senha_message">Digite o seu email para podermos enviar um email para redefinir sua senha:</string>
    <string name="hint_esqueceu_senha_email_mudar_senha">Um email foi enviado para alteração da senha!</string>
    <string name="hint_esqueceu_senha_digite_um_email">Digite um email para alterar a senha!</string>
    <string name="hint_processo_geral_voltar">Voltar</string>
    <string name="hint_processo_geral_cancelar">Cancelar</string>
    <string name="hint_processo_geral_avancar">Avançar</string>
    <string name="hint_processo_geral_finalizar">Finalizar</string>
    <string name="hint_processo_geral_pular">Pular</string>
    <string name="hint_processo_geral_enviar">Enviar</string>
    <string name="hint_processo_geral_publicar">Publicar</string>
    <string name="hint_processo_geral_salvar">Salvar</string>
    <string name="hint_step1">1/5</string>
    <string name="hint_step1_primeiro_nome">Primeiro nome</string>
    <string name="hint_step1_sobrenome">Sobrenome</string>
    <string name="hint_step1_nascimento">17/07/2000</string>
    <string-array name="hint_step1_generos">
        <item>Outro</item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="hint_step1_erro_nome">Nome ou sobrenome inválido(s)!</string>
    <string name="hint_step1_erro_nome_invalido">Números não são válidos!</string>
    <string name="hint_step1_iforme_alguns_dados">Por favor, informe alguns dados.</string>
    <string name="hint_step2">2/5</string>
    <string name="hint_step2_message">Um email de verificação será mandado para o email:</string>
    <string name="hint_step2_email">Email</string>
    <string name="hint_step2_senha">Senha</string>
    <string name="hint_step2_confirmar_senha">Confirmar senha</string>
    <string name="hint_step2_erro_email_invalido">Email inválido!</string>
    <string name="hint_step2_erro_email_em_uso">O email está em uso!</string>
    <string name="hint_step2_erro_tamanho_senha">A senha deve conter entre 6 e 18 caracteres"</string>
    <string name="hint_step2_erro_cofirma_senha">As senhas não coincidem!</string>
    <string name="hint_step3">3/5</string>
    <string name="hint_step3_message">Por favor, digite um número válido \nExemplo: +55 (21) 99999-9999</string>
    <string name="hint_step3_DDD">DDD</string>
    <string name="hint_step3_exemplo_telefone">99999-9999</string>
    <string name="hint_step3_numero_invalido">Número inválido!</string>
    <string name="hint_step4">4/5</string>
    <string name="hint_step4_message">Um código de confirmação foi enviado para o número: </string>
    <string name="hint_step4_cod_confirmacao">Código de confirmação</string>
</resources>