<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_publico"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/title_publico" />

    <item
        android:id="@+id/navigation_amigos"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_amigos" />

    <item
        android:id="@+id/navigation_adiciona"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_adiciona" />

    <item
        android:id="@+id/navigation_pesquisa"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_pesquisa" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_perfil" />

</menu>
