<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comj.example.android.judgeme_androidapp.Activities.CreateAccount2Activity"

    android:background="@color/background"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCreateAccountStep2Voltar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_voltar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep2Cancelar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_cancelar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep2Progresso"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step2"
        android:textSize="36dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep2MenssagemErro"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step2_erro_email_invalido"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@color/secondaryLightColor"

        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccountStep2Progresso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep2MenssagemPricipal"

        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step2_message"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccountStep2MenssagemErro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextCreateAccount2Email"

        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"

        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step2_email"
        android:inputType="textEmailAddress"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateAccountStep2MenssagemPricipal"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/editTextCreateAccount2Senha"

        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"

        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step2_senha"
        android:inputType="textPassword"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCreateAccount2Email"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/editTextCreateAccount2ConfirmarSenha"

        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"

        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step2_confirmar_senha"
        android:inputType="textPassword"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCreateAccount2Senha"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/buttomCreateAccount2Avancar"

        android:layout_width="250dp"
        android:layout_height="80dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_avancar"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCreateAccount2ConfirmarSenha" />

</android.support.constraint.ConstraintLayout>
