<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comj.example.android.judgeme_androidapp.Activities.CreateAccount4Activity"

    android:background="@color/background"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCreateAccountStep4Voltar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_voltar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep4Cancelar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_cancelar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep4Progresso"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step4"
        android:textSize="36dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep4MenssagemPricipal"

        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step4_message"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccountStep4Progresso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextCreateAccount3CodigoConfirmacao"

        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"

        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step4_cod_confirmacao"
        android:inputType="textEmailAddress"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateAccountStep4MenssagemPricipal"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/buttomCreateAccount4Avancar"

        android:layout_width="250dp"
        android:layout_height="80dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_avancar"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCreateAccount3CodigoConfirmacao" />

</android.support.constraint.ConstraintLayout>
