<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comj.example.android.judgeme_androidapp.Activities.CreateAccount3Activity"

    android:background="@color/background"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewCreateAccountStep3Voltar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_voltar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep3Cancelar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_cancelar"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep3Progresso"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step3"
        android:textSize="36dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewCreateAccountStep3MenssagemPricipal"

        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_step3_message"
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="25dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewCreateAccountStep3Progresso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spinnerCreateAccount3Paises"

        android:layout_width="250dp"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:entries="@array/hint_step3_paises_ddd"
        android:fontFamily="sans-serif-condensed"

        android:spinnerMode="dialog"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCreateAccountStep3MenssagemPricipal">

    </Spinner>

    <EditText
        android:id="@+id/editTextCreateAccount3DDD"

        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"

        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step3_DDD"
        android:inputType="phone"
        android:textSize="16dp"

        app:layout_constraintStart_toStartOf="@id/spinnerCreateAccount3Paises"
        app:layout_constraintTop_toBottomOf="@id/spinnerCreateAccount3Paises"
        />

    <EditText
        android:id="@+id/editTextCreateAccount3Telefone"

        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="5dp"

        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_step3_exemplo_telefone"
        android:inputType="phone"
        android:textSize="16dp"

        app:layout_constraintStart_toEndOf="@+id/editTextCreateAccount3DDD"
        app:layout_constraintTop_toBottomOf="@id/spinnerCreateAccount3Paises" />

    <Button
        android:id="@+id/buttomCreateAccount3Avancar"

        android:layout_width="250dp"
        android:layout_height="80dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_avancar"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCreateAccount3Telefone" />

    <TextView
        android:id="@+id/textViewCreateAccountStep3Pular"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hint_processo_geral_pular"
        android:textSize="24dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintStart_toStartOf="@id/buttomCreateAccount3Avancar"
        app:layout_constraintTop_toBottomOf="@id/buttomCreateAccount3Avancar"/>

</android.support.constraint.ConstraintLayout>
